# smile-mobile

./: .gitignore  README.md
doc/: Bill of Materials.xlsx  Hardware_Architecture.drawio  Local_Waypoint_Nav.drawio  Software_Architecture.drawio
hardware/master_controller/: master_controller.ino
smile_mobile_robot_ws/src/smile_mobile_hardware/: CMakeLists.txt
smile_mobile_robot_ws/src/smile_mobile_hardware/config/: hardware.yaml
smile_mobile_robot_ws/src/smile_mobile_hardware/launch/: hardware.launch
smile_mobile_robot_ws/src/smile_mobile_hardware/src/: hardware_interface.py  joy_init.txt
smile_mobile_robot_ws/src/smile_mobile_hardware/src/encoder_imu_driver/: encoder_imu_driver.ino  encoder_imu_driver.py
smile_mobile_robot_ws/src/smile_mobile_hardware/src/master_controller/: master_controller.ino
smile_mobile_robot_ws/src/smile_mobile_hardware/src/motor_driver/: motor_driver.ino  motor_driver.py  test.py
smile_mobile_robot_ws/src/smile_mobile_hardware/src/vision/: webcam_publish.py
smile_mobile_robot_ws/src/smile_mobile_robot/: CMakeLists.txt  package.xml
smile_mobile_robot_ws/src/smile_mobile_robot/action/: motion.action
smile_mobile_robot_ws/src/smile_mobile_robot/config/: smile_physical_robot.yaml  smile_sim_robot.yaml
smile_mobile_robot_ws/src/smile_mobile_robot/launch/: keyboard_teleop_physical.launch  keyboard_teleop_sim.launch  main_physical_robot.launch
smile_mobile_robot_ws/src/smile_mobile_robot/src/: behaviour_selection.py
smile_mobile_robot_ws/src/smile_mobile_web/: README.md  package-lock.json  package.json
(+34 files in other folders)
